-- CreateTable
CREATE TABLE "Grados" (
    "id" SERIAL NOT NULL,
    "nombre" TEXT NOT NULL,

    CONSTRAINT "Grados_pkey" PRIMARY KEY ("id")
);
