-- CreateTable
CREATE TABLE "Grupos" (
    "id" SERIAL NOT NULL,
    "nombre" TEXT NOT NULL,

    CONSTRAINT "Grupos_pkey" PRIMARY KEY ("id")
);
