-- CreateTable
CREATE TABLE "Departamentos" (
    "id" SERIAL NOT NULL,
    "nombre" TEXT NOT NULL,

    CONSTRAINT "Departamentos_pkey" PRIMARY KEY ("id")
);
